<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <!-- Recipe List Item layout as the header -->
    <include layout="@layout/recipe_list_item" />

    <!-- Recipe Ingredients Label-->
    <TextView
        style="@style/ListTitleLabel"
        android:drawableStart="@drawable/ic_ingredients_basket"
        android:text="@string/ingredients"
        android:drawableLeft="@drawable/ic_ingredients_basket" />

    <!-- Recipe Ingredient List -->
    <android.support.v7.widget.RecyclerView
        android:id="@+id/ingredient_list_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <!-- Recipe Steps Label-->
    <TextView
        style="@style/ListTitleLabel"
        android:drawableStart="@drawable/ic_direction_make"
        android:text="@string/directions"
        android:drawableLeft="@drawable/ic_direction_make" />

    <!-- Recipe Steps List -->
    <android.support.v7.widget.RecyclerView
        android:id="@+id/step_list_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>