...
    android:orientation="vertical"
    tools:context="com.andrewclam.bakingapp.StepDetailFragment">

    <!-- ExoPlayer View (If Available)-->
    <com.google.android.exoplayer2.ui.SimpleExoPlayerView
        android:background="@color/colorBlack"
        android:id="@+id/step_video_player_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ProgressBar
            android:id="@+id/video_loading_pb"
...
                android:layout_height="wrap_content"
                android:contentDescription="@string/step_image_thumbnail"
                android:padding="16dp" />

            <!-- Recipe Description -->
            <TextView
                android:id="@+id/step_detail_description_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:textSize="16sp"
                android:textColor="@color/colorPrimaryText"
                tools:text="Just put the eggs in and you are done!" />
...
